--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
   "version": 2,
-  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/api/webhook", "dest": "index.js" }]
+  "builds": [{ "src": "api/index.js", "use": "@vercel/node" }]
 }
